[tool.poetry]
name = "python-libs"
version = "0.1.0"
description = ""
authors = ["seungjinhan <hanblues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
